# Gemma_Hack

./: .env.example  .gitignore  AGENTS.md  AGENT_PROFILES.md  DATASET.md  FULL_REVIEW.docx  FULL_REVIEW.md  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  RELATED_WORK.md  RESEARCH.md  SENIOR_REVIEW.md  Website.txt  pyproject.toml
config/: asr_model.json  deadlines.json  evidence_checklists.json  ipc_bns_mappings.json  model_builds.json  ocr_model.json  official_sources.json  official_web_sources.json  public_datasets.json  rights_checklists.json
docs/: ADHIKAAR_INTEGRATION.md  CONSUMER_RULES_REVIEW.md  CORPUS_PIPELINE.md  DATASET_STATUS.md  DELHI_RENT_APPLICABILITY.md  EVALUATION.md  LEGAL_AID_FINDER.md  MAPPING_REVIEW_WORKSHEET.md  PRIVACY.md  RETRIEVAL_QUALITY.md  SAFETY_ROUTER.md  TEXT_INTAKE.md  asr_feasibility.md  corpus_audit_worksheet.md  ipc_bns_worksheet.md  model_feasibility.md  ocr_feasibility.md
fixtures/: answer_scenarios.json  eval_queries.json  golden_conversion.json  golden_deadline.json  golden_document_photo.json  golden_legal_aid.json  golden_retrieval.json  retrieval_corpus.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnswerProgress.tsx  Feedback.tsx  (+19 more)
scripts/: audit_corpus.py  build_corpus.py  build_index.py  build_legal_aid_directory.py  build_sankalan_candidates.py  curate_mappings.py  download_official_snapshots.py  download_official_sources.py  download_public_datasets.py  evaluate_answers.py  evaluate_retrieval.py  extract_image_text.py  find_legal_aid.py  generate_ocr_fixtures.py  get_evidence_checklist.py  import_adhikaar_legal_aid.py  import_adhikaar_mappings.py  model_feasibility.py  process_text_intake.py  route_safety.py  serve_api.py  transcribe_audio.py
src/: __init__.py  app.py  config.py  pipeline.py
src/actions/: __init__.py  checklists.py  rights.py
src/agents/: __init__.py  devils_advocate.py  drafter.py  extractor.py  ollama.py  researcher.py  verifier.py
src/api/: __init__.py  app.py  models.py  state.py
src/applicability/: __init__.py  delhi_rent.py
src/audio/: __init__.py  asr.py  backend.py  integrity.py  models.py  preflight.py
src/corpus/: __init__.py  chunker.py  downloader.py  extract.py  manifest.py  pipeline.py  snapshots.py
src/documents/: __init__.py  pdf.py
src/feasibility/: __init__.py  benchmark.py  models.py  system.py
src/intake/: __init__.py  models.py  text.py
src/legal_aid/: __init__.py  directory.py  finder.py
src/legal_time/: __init__.py  converter.py  deadlines.py  mapping.py  sankalan.py
src/models/: __init__.py  schemas.py
src/ocr/: __init__.py  engine.py  image.py  integrity.py  models.py
src/retrieval/: __init__.py  bm25.py  collections.py  corpus.py  debug.py  embeddings.py  hybrid.py  query.py  tokenize.py  types.py
src/safety/: __init__.py  models.py  router.py
src/tools/: community.py  consequences.py  rights_card.py
src/workflow/: __init__.py  state_machine.py
tests/: __init__.py  test_adhikaar_import.py  test_adhikaar_legal_aid.py  test_api.py  test_api_answer.py  test_api_transcribe.py  test_app.py  test_audio_asr.py  test_community.py  test_config.py  test_consequences.py  test_consumer_rules_chunker.py  test_converter.py  test_corpus_chunker.py  test_corpus_cli.py  test_corpus_downloader.py  test_corpus_extract.py  test_corpus_manifest.py  test_corpus_pipeline.py  test_corpus_scan_detection.py  test_delhi_rent_applicability.py  test_devils_advocate.py  test_embeddings.py  test_evidence_checklists.py  test_extractor.py  test_feasibility.py  test_legal_aid_directory.py  test_legal_aid_finder.py  test_legal_time.py  test_ocr.py  test_official_snapshots.py  test_offline.py  test_ollama.py  test_pdf.py  test_pipeline.py  test_public_datasets.py  test_researcher.py  test_retrieval.py  test_retrieval_quality.py  test_retrieval_quality_review.py  (+9 more)
(+1 files in other folders)
