[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "nyaya-navigator"
version = "0.1.0"
description = "Offline, multilingual, citation-grounded Indian legal navigation assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary - hackathon prototype" }
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
ui = ["streamlit>=1.40,<2"]
api = ["fastapi>=0.115,<1", "uvicorn>=0.32,<1", "python-multipart>=0.0.9"]
corpus = ["pymupdf>=1.24,<2"]
retrieval = [
  "faiss-cpu>=1.9,<2; python_version < '3.13'",
  "sentence-transformers>=3.3,<4",
]
speech = [
  "faster-whisper==1.2.1",
  "ctranslate2==4.8.1",
  "tokenizers==0.23.1",
  "onnxruntime==1.27.0",
  "av==18.0.0",
]
ocr = ["pillow==12.3.0"]
card = ["pillow==12.3.0", "qrcode>=8,<9"]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
nyaya = "src.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
