[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "nyaya-navigator"
version = "0.1.0"
description = "Offline, multilingual, citation-grounded Indian legal navigation assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary - hackathon prototype" }
dependencies = [
  "pydantic>=2.7,<3",
  # numpy backs the hybrid retriever's semantic (EmbeddingGemma) channel. It is a
  # hard runtime requirement, not optional, so it lives in the base dependencies.
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
ui = ["streamlit>=1.40,<2"]
api = ["fastapi>=0.115,<1", "uvicorn>=0.32,<1", "python-multipart>=0.0.9"]
corpus = ["pymupdf>=1.24,<2", "pypdf>=5,<6"]
# NOTE: there is intentionally no `retrieval` extra. The production semantic channel
# is EmbeddingGemma served by the local Ollama runtime (no Python library needed) fused
# with the in-repo BM25, and numpy in the base dependencies covers the vector maths.
# sentence-transformers/faiss were removed: nothing in src/ imports them, and
# sentence-transformers pinned an old `transformers` that made the environment
# unresolvable alongside the `speech` extra.
speech = [
  "faster-whisper==1.2.1",
  "ctranslate2==4.8.1",
  "tokenizers==0.23.1",
  "onnxruntime==1.27.0",
  "av==18.0.0",
]
ocr = ["pillow==12.3.0"]
card = ["pillow==12.3.0", "qrcode>=8,<9"]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
nyaya = "src.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
